# testwanf-testwanf-Titanic---Machine-Learning-from-Disaster

./: README.md  kaggle_pt2onnx.py  kaggle_test.py  kaggle_train.py  model.onnx  model.param  model_weights.pth  output.csv
ncnn_deployment/: CMakeLists.txt  main.cpp
